--- a/templates/home.html
+++ b/templates/home.html
@@ -9,10 +9,10 @@
         text-align: center;
       }
     </style>
-    <title>Document</title>
+    <title>Report System</title>
   </head>
   <body>
-    <h1>환영쿠</h1>
-    <button onclick="location.href='/pdf/'">버튼</button>
+    <h1>건강보험심사평가원 수원지원 사옥그린리모델링 컨설팅 용역 최종보고서</h1>
+    <button onclick="location.href='/pdf/'">생성</button>
   </body>
 </html>
